# arrmada

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: activity.py  analytics.py  auth.py  dashboard.py  deps.py  downloads.py  duplicates.py  files.py  media.py  notifications.py  profile_overrides.py  recommendations.py  requests.py  router.py  sabnzbd_config.py  search.py  services.py  settings.py  setup.py  trash_guides.py
backend/app/models/: __init__.py  analytics.py  duplicate.py  media.py  notification.py  profile_override.py  recommendation.py  request.py  service.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  common.py  media.py  recommendation.py  request.py  service.py  trash_guides.py
backend/app/services/: __init__.py  analytics.py  arr_client.py  bazarr.py  discovery.py  duplicates.py  encryption.py  file_manager.py  health_checker.py  import_helpers.py  jellyfin.py  lidarr.py  media_aggregator.py  media_detail.py  media_mover.py  notification_service.py  path_mapper.py  prowlarr.py  radarr.py  readarr.py  (+8 more)
backend/scripts/: cleanup_dupes.py  fix_dune_spam.py  godfather_analysis.json  godfather_scan.json  import_probe.json  series_match_debug.json  setup_services.py  test_manual_import.py  test_matching.py  test_telegram.py  test_unraid.py
backend/tests/: conftest.py  test_health_checker.py
(+79 files in other folders)
