[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = ["E501"]  # line too long — handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.coverage.run]
source = ["app"]
omit = ["app/tasks/*", "app/services/media_mover.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 40

[project]
name = "arrmada-backend"
version = "0.1.0"
requires-python = ">=3.11"
